--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+eng-ai-tutor-6f7b76e3db52.json
+eng-ai-tutor-901eb92f7fc2.json
+client_secret_446087388889-d1vm31j1hop1d9pl8dlqu4v2vvsvr25e.apps.googleusercontent.com.json
 
 # dependencies
 /node_modules
