--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "ai": "^2.2.20",
     "eventsource-parser": "^0.1.0",
     "firebase": "^10.6.0",
+    "google-auth-library": "^9.2.0",
+    "google-spreadsheet": "^4.1.1",
+    "googleapis": "^105.0.0",
     "next": "^13.5.6",
     "next-auth": "^4.24.5",
     "next-pwa": "^5.6.0",
